add disk usage clean up CPU code

--- a/conky.conf
+++ b/conky.conf
@@ -55,9 +55,6 @@ Core 2: ${cpubar cpu15 6,160}  ${cpu cpu15}%
 Core 2: ${cpubar cpu16 6,160}  ${cpu cpu16}%
 
 CPU utilisation$alignr ${cpu cpu0}%
-${cpubar cpu0}
-
-${cpugraph 000000 ffffff}
 
 Memory ${hr 2}
 
@@ -67,9 +64,9 @@ $membar
 SWAP $alignc $swap / $swapmax $alignr $swapperc%
 $swapbar
 
-${if_match  "$swap"!="0B  " } 
-  ${exec notify-send "Warning: Swapping"}
-$endif
+Disk Usage ${hr 2}
+Root${goto 120}${fs_bar_free 6,275 /}
+Home${goto 120}${fs_bar_free 6,275 /home}
 
 Top Processes ${hr 2}
 $processes processes
