set conky colors to match theme

--- a/conky.conf
+++ b/conky.conf
@@ -20,8 +20,8 @@ conky.config = {
 	default_shade_color = 'red',
 	default_outline_color = 'green',
 	alignment = 'top_right',
-	gap_x = 14,
-	gap_y = 48,
+	gap_x = 0,
+	gap_y = 0,
 	no_buffers = true,
 	uppercase = false,
 	cpu_avg_samples = 2,
@@ -30,57 +30,52 @@ conky.config = {
 };
 
 conky.text = [[
-System Info ${hr 2 }
+${color #00acc1}System Info:$color ${color #00897b}${hr 2 }:$color
+${color #00897b}Time:$color ${time %H:%M:%S}
+${color #00897b}Date:$color ${time %m-%d-%Y}
+${color #00897b}$nodename$color $sysname $kernel on $machine
+${color #00897b}Uptime:$color $uptime ${color lightgrey}${color #516aec}
+${color #00897b}CPU: ${color lightgrey}AMD Ryzen 7 2700 @ $color${freq_g} GHz
+${color #00897b}Thread 1:$color ${cpubar cpu1 6,160}  ${cpu cpu1}%
+${color #00897b}Thread 2:$color ${cpubar cpu3 6,160}  ${cpu cpu2}%
+${color #00897b}Thread 3:$color ${cpubar cpu3 6,160}  ${cpu cpu3}%
+${color #00897b}Thread 4:$color ${cpubar cpu4 6,160}  ${cpu cpu4}%
+${color #00897b}Thread 5:$color ${cpubar cpu5 6,160}  ${cpu cpu5}%
+${color #00897b}Thread 6:$color ${cpubar cpu6 6,160}  ${cpu cpu6}%
+${color #00897b}Thread 7:$color ${cpubar cpu7 6,160}  ${cpu cpu7}%
+${color #00897b}Thread 8:$color ${cpubar cpu8 6,160}  ${cpu cpu8}%
+${color #00897b}Thread 9:$color ${cpubar cpu9 6,160}  ${cpu cpu9}%
+${color #00897b}Thread 10:$color ${cpubar cpu10 6,160}  ${cpu cpu10}%
+${color #00897b}Thread 11:$color ${cpubar cpu11 6,160}  ${cpu cpu11}%
+${color #00897b}Thread 12:$color ${cpubar cpu12 6,160}  ${cpu cpu12}%
+${color #00897b}Thread 13:$color ${cpubar cpu13 6,160}  ${cpu cpu13}%
+${color #00897b}Thread 14:$color ${cpubar cpu14 6,160}  ${cpu cpu14}%
+${color #00897b}Thread 15:$color ${cpubar cpu15 6,160}  ${cpu cpu15}%
+${color #00897b}Thread 16:$color ${cpubar cpu16 6,160}  ${cpu cpu16}%
+${color #00897b}Overall CPU:$color$alignr ${cpu cpu0}%
 
-${color #55aaff}Time:$color ${time %H:%M:%S}
-${color #55aaff}Date:$color ${time %m-%d-%Y}
-${color #55aaff}$nodename$color $sysname $kernel on $machine
-${color #55aaff}Uptime:$color $uptime ${color lightgrey}${color #55aaff}
+${color #00acc1}Disk Usage:$color ${color #00897b}${hr 2}:$color
+${color #00897b}Root:$color${goto 120}${fs_bar_free 6,275 /}
+${color #00897b}Home:$color${goto 120}${fs_bar_free 6,275 /home}
 
-${color #55aaff}CPU: ${color lightgrey}AMD Ryzen 7 2700 @ $color${freq_g} GHz
-Core 1: ${cpubar cpu1 6,160}  ${cpu cpu1}%
-Core 2: ${cpubar cpu3 6,160}  ${cpu cpu3}%
-Core 2: ${cpubar cpu4 6,160}  ${cpu cpu4}%
-Core 2: ${cpubar cpu5 6,160}  ${cpu cpu5}%
-Core 2: ${cpubar cpu6 6,160}  ${cpu cpu6}%
-Core 2: ${cpubar cpu7 6,160}  ${cpu cpu7}%
-Core 2: ${cpubar cpu8 6,160}  ${cpu cpu8}%
-Core 2: ${cpubar cpu9 6,160}  ${cpu cpu9}%
-Core 2: ${cpubar cpu10 6,160}  ${cpu cpu10}%
-Core 2: ${cpubar cpu11 6,160}  ${cpu cpu11}%
-Core 2: ${cpubar cpu12 6,160}  ${cpu cpu12}%
-Core 2: ${cpubar cpu13 6,160}  ${cpu cpu13}%
-Core 2: ${cpubar cpu14 6,160}  ${cpu cpu14}%
-Core 2: ${cpubar cpu15 6,160}  ${cpu cpu15}%
-Core 2: ${cpubar cpu16 6,160}  ${cpu cpu16}%
-
-CPU utilisation$alignr ${cpu cpu0}%
-
-Memory ${hr 2}
-
-MEM $alignc $mem / $memmax $alignr $memperc%
+${color #00acc1}Memory:$color ${color #00897b}${hr 2}:$color
+${color #00897b}MEM$color $alignc $mem / $memmax $alignr $memperc%
 $membar
-
-SWAP $alignc $swap / $swapmax $alignr $swapperc%
+${color #00897b}SWAP$color $alignc $swap / $swapmax $alignr $swapperc%
 $swapbar
 
-Disk Usage ${hr 2}
-Root${goto 120}${fs_bar_free 6,275 /}
-Home${goto 120}${fs_bar_free 6,275 /home}
+${color #00acc1}Top Processes:$color ${color #00897b}${hr 2}:$color
+${color #00897b}Total Processes:$color $alignr $processes
+${color #00897b}NAME             		${alignr} PID   CPU  MEM:$color
+${color #00897b}${top name 1}$color $alignr ${top pid 1} ${top cpu 1} ${top mem 1}
+${color #00897b}${top name 2}$color $alignr ${top pid 2} ${top cpu 2} ${top mem 2}
+${color #00897b}${top name 3}$color $alignr ${top pid 3} ${top cpu 3} ${top mem 3}
+${color #00897b}${top name 4}$color $alignr ${top pid 4} ${top cpu 4} ${top mem 4}
+${color #00897b}${top name 5}$color $alignr ${top pid 5} ${top cpu 5} ${top mem 5}
 
-Top Processes ${hr 2}
-$processes processes
-
-NAME             		${alignr} PID   CPU  MEM
-${top name 1} $alignr ${top pid 1} ${top cpu 1} ${top mem 1}
-${top name 2} $alignr ${top pid 2} ${top cpu 2} ${top mem 2}
-${top name 3} $alignr ${top pid 3} ${top cpu 3} ${top mem 3}
-${top name 4} $alignr ${top pid 4} ${top cpu 4} ${top mem 4}
-${top name 5} $alignr ${top pid 5} ${top cpu 5} ${top mem 5}
-
-Network ${hr 2}
-Up:          ${upspeed enp34s0}
-Down:    ${downspeed enp34s0}
+${color #00acc1}Network:$color ${color #00897b}${hr 2}:$color
+${color #00897b}Up:$color $alignr ${upspeed enp34s0}
+${color #00897b}Down:$color $alignr ${downspeed enp34s0}
 
 
 ]];
